# qmlfmt

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp  main.h  qmlfmt.cpp  qmlfmt.h
QtCreator/: CMakeLists.txt  QtCreator.cmake
diff_match_patch/: CMakeLists.txt  diff_match_patch.cpp
qmljs/: CMakeLists.txt  ptyqt.cpp
test/: CMakeLists.txt  main.cpp  testrunner.cpp  testrunner.h
test/data/: in_basic.qml  in_comment.qml  in_enum.qml  in_error-stderr.qml  in_error.qml  in_lambda.qml  in_lambda_complex.qml  in_qrc.qml  out_basic.qml  out_comment.qml  out_enum.qml  out_error-stderr.qml  out_error.qml  out_lambda.qml  out_lambda_complex.qml  out_qrc.qml  tab_and_indent_size_in.qml  tab_and_indent_size_out.qml
